fixed overflow

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -71,7 +71,7 @@ h2 {
 header {
 	height: 100vh;
 	color: var(--color-white);
-	overflow: hidden;
+	overflow: auto;
 }
 
 section {
